# LLMToolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: gmail_agent.py  jira_agent.py  multi_service_agent.py  outlook_agent.py  web_search_agent.py
examples/cli/: web_search_agent.py
examples/streamlit/: multi_service_agent_api.py  multi_service_agent_client.py
src/llmbridge/llm_interface/: llm_interface.py
src/llmbridge/llminterface/: llm_interface.py  schema_generator.py  utils.py
src/llmbridge/services/jira_service/: jira_service.py
src/llmtoolkit/llm_interface/: llm_interface.py  schema_generator.py
src/llmtoolkit/services/code_interpreter_service/: code_interpreter_service.py
src/llmtoolkit/services/esios_service/: esios_service.py
src/llmtoolkit/services/gmail_service/: gmail_service.py
src/llmtoolkit/services/jira_service/: jira_service.py
src/llmtoolkit/services/outlook_service/: outlook_service.py
src/llmtoolkit/services/web_search_service/: web_search_service.py
